# exchange-ews-readonly-1

.github/workflows/: ci.yml
exchange-ews-readonly/: .env.example  README.md  READ_ONLY_POLICY.md  SKILL.md  pyproject.toml  requirements.txt
exchange-ews-readonly/examples/: get.json  health.json  list.json  search.json
exchange-ews-readonly/exchange_ews_readonly/: __init__.py  client.py  config.py  errors.py  guards.py  logging_utils.py  models.py  service.py
exchange-ews-readonly/scripts/: ews_read.py
exchange-ews-readonly/tests/: test_config.py  test_guards.py  test_limits.py  test_service_readonly.py
